<resources>
    <string name="app_name">MPonline-Vendor</string>
    <string name="no_net">No data found, please on wifi/mobile data !</string>
    <string name="no_data">No data found</string>
    <string name="please_wait">Please wait</string>
    <string name="no_records">No Data Available</string>
    <string name="no_net_connection">No Network Connection</string>
    <string name="check_ur_network">Check Your Network</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="my_account">My Account</string>
    <string name="help">Help</string>
    <string name="total_order">Total orders</string>
    <string name="security">Security</string>
    <string name="nav_nearby_services">Nearby Kiosk services</string>
    <string name="nav_history">History</string>
    <string name="nav_home">Home</string>
    <string name="nav_chat">Chat</string>
    <string name="nav_nearby">Nearby</string>
    <string name="nav_acc">Account</string>
    <string name="top_services">Top Services</string>
    <string name="services">Services</string>
    <string name="review_n_ratings">Review and ratings</string>
    <string name="read_reviews">Read Reviews</string>
    <string name="top_stores">Top Stores</string>
    <string name="unread">Unread</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="verify">Verify</string>
    <string name="otp">OTP</string>
    <string name="sign_up">Sign up</string>
    <string name="otp_recieved">OTP received on mobile</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="edit_phone">Edit Phone No.</string>
    <string name="already_acc"><u>Already have an account? Login!</u></string>
    <string name="dont_hav_acc"><u>Don\'t have an account? Sign up!</u></string>
    <string name="forgot_pin">Forgot Pin? Reset Here</string>
    <string name="mobile_no">Mobile no.</string>
    <string name="enter_otp">Enter your OTP</string>
    <string name="enter_new_pin">Enter New Pin</string>
    <string name="reenter_new_pin">Re-Enter New Pin</string>
    <string name="change_pin">Change PIN</string>
    <string name="enter_pin">Enter your PIN</string>
    <string name="full_name">Full name</string>
    <string name="read">Read</string>
    <string name="recent">Recent</string>
    <string name="order_history">Order History</string>
    <string name="camera_name">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="notification">Notification</string>
    <string name="chat">Chat</string>
    <string name="download_all">Download All</string>
    <string name="apply">Apply</string>
    <string name="sub_total">Sub Total</string>
    <string name="total">Total</string>
    <string name="payment_method">Payment Method</string>
    <string name="login_as_vendor">Login as\nVendor</string>
    <string name="ur_new_pin">Your\nNew PIN</string>
    <string name="register_as_vendor">Register as\nVendor</string>
    <string name="forgot_pin_click">Forgot PIN? Click here!</string>
    <string name="overview">Overview</string>
    <string name="payment_overview">Payments Overview</string>
    <string name="total_orders">Total Orders</string>
    <string name="completed_orders">Completed Orders</string>
    <string name="due_amt">Due Amount</string>
    <string name="collected_at_store">Collected at store</string>
    <string name="pending_orders">Pending Orders</string>
    <string name="denied_orders">Denied Orders</string>
    <string name="payment_recieved">Payment Recieved</string>
    <string name="total_amt">Total Amount</string>
    <string name="recieved_amt">Recieved Amount</string>
    <string name="settled_amt">Settled Amount</string>
    <string name="unsettled_amt">Unsettled Amount</string>
    <string name="recent_orders">Recent Orders</string>
    <string name="categories">Categories</string>
    <string name="recent_txn">Recent Transactions</string>
    <string name="recent_txn_desc">The following are recent payments which are shown below tap to get to the order page.</string>
    <string name="categories_desc">You can manage or add  your Categories ant its services which are already listed for kiosks.</string>
    <string name="past_order_listed">Past 5 orders listed below</string>
    <string name="overview_desc">The following data shown below is from January 01, 2021 to this date. This will be updated as per order request and your actions.</string>
    <string name="payment_overview_desc">The following data shown below is from January 01, 2021 to this date. This will be updated as per order request and your actions. Tap to access.</string>
    <string name="add_entry">Add Entry</string>
    <string name="pay_settlement">Pay Settlement</string>
    <string name="offer_subtitle">The Offers you are providing your customers for your services you offering them on this platform. Tap to Edit or Delete.</string>
    <string name="customers">Customers</string>
    <string name="admins">Admins</string>
    <string name="add_category">Add Category</string>
    <string name="add_category_desc">Add categories for your service</string>
    <string name="add_category_hint">Search for categories or services eg. RRB forms, Exams</string>
    <string name="ur_title">Your title</string>
    <string name="eligibility_criteria">Eligibility criteria</string>
    <string name="ur_desc">Your description</string>
    <string name="include_charges">Include Charges</string>
    <string name="price">Price</string>
    <string name="base_price">Base Price</string>
    <string name="admin_convinience_fee">Admin Convinience Fee</string>
    <string name="edit">Edit</string>
    <string name="dummy_desc">sdfsdf sdf skdhfjsd</string>
    <!--    <string name="overview">Overview</string>-->
</resources>
