<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin15"
    android:background="@color/white">

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/Text_raleway_semibold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin35"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="@dimen/textsize22" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Text_mont_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_as_vendor"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize30" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin25"
            android:background="@color/grey_back"
            android:orientation="vertical"
            android:padding="@dimen/margin15">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Text_mont_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobile_no"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edit_mobile"
                style="@style/Text_raleway_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/textsize10"
                android:background="@color/grey_back"
                android:textSize="@dimen/textsize16" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin15"
            android:background="@color/grey_back"
            android:orientation="vertical"
            android:padding="@dimen/margin15">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Text_mont_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_pin"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edit_pin"
                style="@style/Text_raleway_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/textsize10"
                android:background="@color/grey_back"
                android:textSize="@dimen/textsize16" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_forgot_pwd"
            style="@style/Text_mont_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin15"
            android:text="@string/forgot_pin_click"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize14" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_login"
            style="@style/Text_mont_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin15"
            android:background="@color/sly_blue"
            android:gravity="center"
            android:padding="@dimen/margin15"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize16" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_register"
            style="@style/Text_mont_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin15"
            android:layout_marginBottom="@dimen/margin15"
            android:background="@drawable/rect_stroke_blue"
            android:gravity="center"
            android:padding="@dimen/margin15"
            android:text="@string/register"
            android:textColor="@color/sly_blue"
            android:textSize="@dimen/textsize16" />
    </LinearLayout>


</RelativeLayout>



