<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin15"
    android:background="@color/white">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin50"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Text_raleway_regular"
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ur_new_pin"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize30" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin35"
            android:background="@color/grey_back"
            android:orientation="vertical"
            android:padding="@dimen/margin15">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Text_mont_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_pin"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edt_pin"
                style="@style/Text_raleway_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_marginTop="@dimen/textsize10"
                android:background="@color/grey_back"
                android:textSize="@dimen/textsize16" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin5"
            android:background="@color/grey_back"
            android:orientation="vertical"
            android:padding="@dimen/margin15">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Text_mont_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reenter_new_pin"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edt_reenter_new_pin"
                style="@style/Text_raleway_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_marginTop="@dimen/textsize10"
                android:background="@color/grey_back"
                android:textSize="@dimen/textsize16" />
        </LinearLayout>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_change_pin"
            style="@style/Text_mont_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin20"
            android:background="@color/sly_blue"
            android:gravity="center"
            android:padding="@dimen/margin15"
            android:text="@string/change_pin"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize16" />

    </LinearLayout>


</RelativeLayout>



