<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin15"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Text_title"
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Categories"/>

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Text_subtitle"
            android:id="@+id/text_subtitle"
            android:layout_marginTop="@dimen/margin8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_category_desc"/>

        <androidx.cardview.widget.CardView
            app:cardCornerRadius="@dimen/margin3"
            android:elevation="@dimen/margin3"
            android:id="@+id/cv_service_logo"
            android:layout_marginTop="@dimen/margin25"
            android:layout_gravity="center"
            android:layout_width="@dimen/margin90"
            android:layout_height="@dimen/margin90">

            <com.mponline.vendorApp.ui.customui.SquareRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_centerInParent="true"
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/image_service"
                            android:background="@color/grey_alpha"
                            android:layout_gravity="center"
                            android:layout_width="@dimen/margin40"
                            android:layout_height="@dimen/margin40"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/Text_mont_regular"
                            android:id="@+id/text_service"
                            android:gravity="center"
                            android:layout_marginTop="@dimen/margin15"
                            android:textColor="@color/light_black"
                            android:text="Exam forms"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                </RelativeLayout>
            </com.mponline.vendorApp.ui.customui.SquareRelativeLayout>

        </androidx.cardview.widget.CardView>


        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Text_title_bold"
            android:layout_marginTop="@dimen/margin15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eligibility_criteria"/>

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Text_subtitle"
            android:id="@+id/text_criteria_desc"
            android:layout_marginTop="@dimen/margin15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="sdjf kjsdfj sdfjksbd jkbsdjfb sjdbfj sbdfjksdfj sdkjfb sjkdfbsjkdfjsdkb fjksbdf jksbdf"/>

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Text_title_bold"
            android:layout_marginTop="@dimen/margin15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"/>

        <RelativeLayout
            android:layout_marginTop="@dimen/margin15"
            android:layout_marginBottom="@dimen/margin15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Text_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/base_price"/>

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Text_title_bold"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                android:text="$ 2345"/>

        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_price_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RelativeLayout
            android:layout_marginTop="@dimen/margin15"
            android:layout_marginBottom="@dimen/margin15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Text_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/admin_convinience_fee"/>

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Text_title_bold"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                android:text="$ 2345"/>

        </RelativeLayout>

    </LinearLayout>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_criteria_edit"
        style="@style/Text_mont_regular"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/margin15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin15"
        android:background="@color/sly_blue"
        android:gravity="center"
        android:padding="@dimen/margin15"
        android:text="@string/edit"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize16" />

</RelativeLayout>