<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin15"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Text_title"
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Categories"/>

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Text_subtitle"
            android:id="@+id/text_subtitle"
            android:layout_marginTop="@dimen/margin8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_category_desc"/>

        <androidx.cardview.widget.CardView
            app:cardCornerRadius="@dimen/margin3"
            android:elevation="@dimen/margin3"
            android:id="@+id/cv_service_logo"
            android:layout_marginTop="@dimen/margin25"
            android:layout_gravity="center"
            android:layout_width="@dimen/margin90"
            android:layout_height="@dimen/margin90">

            <com.mponline.vendorApp.ui.customui.SquareRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_centerInParent="true"
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/image_service"
                            android:background="@color/grey_alpha"
                            android:layout_gravity="center"
                            android:layout_width="@dimen/margin40"
                            android:layout_height="@dimen/margin40"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/Text_mont_regular"
                            android:id="@+id/text_service"
                            android:gravity="center"
                            android:layout_marginTop="@dimen/margin15"
                            android:textColor="@color/light_black"
                            android:text="Exam forms"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>

                </RelativeLayout>
            </com.mponline.vendorApp.ui.customui.SquareRelativeLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin25"
            android:background="@color/grey_back"
            android:orientation="vertical"
            android:padding="@dimen/margin10">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Text_mont_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ur_title"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edit_title"
                style="@style/Text_raleway_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/textsize10"
                android:hint="@string/eligibility_criteria"
                android:background="@color/grey_back"
                android:textSize="@dimen/textsize16" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin25"
            android:background="@color/grey_back"
            android:orientation="vertical"
            android:padding="@dimen/margin10">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Text_mont_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ur_desc"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edit_desc"
                style="@style/Text_raleway_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/textsize10"
                android:hint="@string/ur_desc"
                android:background="@color/grey_back"
                android:textSize="@dimen/textsize16" />
        </LinearLayout>

    </LinearLayout>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_incl_charges"
        style="@style/Text_mont_regular"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/margin15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin15"
        android:background="@color/sly_blue"
        android:gravity="center"
        android:padding="@dimen/margin15"
        android:text="@string/include_charges"
        android:textColor="@color/white"
        android:textSize="@dimen/textsize16" />

</RelativeLayout>