<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin15"
    android:background="@color/white">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin15"
        android:layout_marginTop="@dimen/margin50"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Text_raleway_regular"
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_as_vendor"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize30" />

        <RelativeLayout
            android:layout_marginTop="@dimen/margin25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Text_mont_regular"
                android:id="@+id/text_otp_mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="Enter OTP sent on +91 8888888888"
                android:textColor="@color/black" />
            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Text_mont_regular"
                android:id="@+id/text_mobile_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Edit"
                android:paddingTop="@dimen/margin8"
                android:paddingBottom="@dimen/margin8"
                android:paddingLeft="@dimen/margin8"
                android:textSize="@dimen/textsize14"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:textColor="@color/sly_blue" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin5"
            android:background="@color/grey_back"
            android:orientation="vertical"
            android:padding="@dimen/margin15">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Text_mont_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_otp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edit_mobile"
                style="@style/Text_raleway_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_marginTop="@dimen/textsize10"
                android:background="@color/grey_back"
                android:textSize="@dimen/textsize16" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Text_mont_regular"
            android:id="@+id/text_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/margin5"
            android:text="Resend OTP in 2:00"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_register"
            style="@style/Text_mont_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin20"
            android:background="@color/sly_blue"
            android:gravity="center"
            android:padding="@dimen/margin15"
            android:text="@string/verify_otp"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize16" />

    </LinearLayout>


</RelativeLayout>



